--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jwt-simple": "^0.5.6",
-    "mongoose": "^8.6.1"
+    "mongoose": "^8.6.1",
+    "nodemon": "^3.1.4"
   }
 }
